src/main/kotlin/com/example/ddd/common/errors/Error.kt
package com.example.ddd.common.errors

class Error(private val message: String) {
    fun toDto() = ErrorDto(message)
}
